--- a/views/admin/election-voter-info.ejs
+++ b/views/admin/election-voter-info.ejs
@@ -219,9 +219,7 @@
           <div class="group">
             <svg class="icon" aria-hidden="true" viewBox="0 0 24 24">
               <g>
-                <path
-                  d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"
-                ></path>
+                <path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path>
               </g>
             </svg>
             <input placeholder="Search" type="search" class="input" />
@@ -247,9 +245,9 @@
               </tr>
             </thead>
             <tbody>
-              <% if (voters.length > 0) { %> <% voters.forEach(voter => { %>
+              <% if (voters.length > 0) { %> <% voters.forEach((voter, index) => { %>
               <tr>
-                <td><%= voter.no %></td>
+                <td><%= index + 1 %></td>
                 <td><%= voter.name %></td>
                 <td><%= voter.email %></td>
                 <td><%= voter.student_number %></td>
@@ -258,9 +256,9 @@
                 <td><%= voter.program %></td>
                 <td><%= voter.status %></td>
               </tr>
-              <% }) %> <% } else { %>
+              <% }); %> <% } else { %>
               <tr>
-                <td colspan="7" style="text-align: center">No registered voters found.</td>
+                <td colspan="8" style="text-align: center">No registered voters found.</td>
               </tr>
               <% } %>
             </tbody>
