--- a/views/admin/system-manage-admins.ejs
+++ b/views/admin/system-manage-admins.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="admin/css/system-manage-accounts.css" />
 
     <!-- Boxicons CDN Link -->
- <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
+    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
@@ -188,7 +188,7 @@
 
           <li>
             <div class="icon-link" id="active-tab">
-              <a href=#>
+              <a href="#">
                 <i class="fa fa-tasks"></i>
                 <span class="link_name">System</span>
               </a>
@@ -205,78 +205,76 @@
         </ul>
       </div>
       <main class="main">
-         <div class="title-container">
+        <div class="title-container">
           <div class="r">
-           <i class="fa-solid fa-user-tie"></i>
+            <i class="fa-solid fa-user-tie"></i>
             <h1 class="title">Admin Account Management</h1>
           </div>
         </div>
         <hr class="title-line" />
         <div class="first-main">
-       
-        <% if (loggedInAdmin.role === "Technical Team" || loggedInAdmin.role === "Developers") { %>
-        <div class="space">
-          <form id="add-admin-form" action="/admin-accounts/add" method="POST">
-            <label>Name:</label>
-            <input type="text" name="name" required />
+          <% if (loggedInAdmin.role === "Technical Team" || loggedInAdmin.role === "Developers") { %>
+          <div class="space">
+            <form id="add-admin-form" action="/admin-accounts/add" method="POST">
+              <label>Name:</label>
+              <input type="text" name="name" required />
 
-           
-            <label>Role:</label>
-            <select name="role" class="role" required>
-              <option value="Electoral Board">Electoral Board</option>
-              <option value="Technical Team">Technical Team</option>
-              <option value="Creatives Team">Creatives Team</option>
-              <option value="Developers">Developers</option>
-            </select>
-          </form>
-           <button type="submit" class="button button-brown">Add Admin</button>
+              <label>Role:</label>
+              <select name="role" class="role" required>
+                <option>Select a Role</option>
+                <option value="Electoral Board Member">Electoral Board</option>
+                <option value="Technical Team Member">Technical Team</option>
+                <option value="Creatives Team Member">Creatives Team</option>
+                <option value="Developer">Developers</option>
+              </select>
+            </form>
+            <button type="submit" class="button button-brown">Add Admin</button>
+          </div>
+          <% } %>
 
-        </div>
-        <% } %>
-       
-       
-        <br />
-        <div class="table-container">
-          <table>
-            <thead>
-              <tr>
-                <th>IMAGE</th>
-                <th>NAME</th>
-                <th>ROLE</th>
-                <th>EMAIL</th>
-                <th>PASSWORD</th>
-                 <th>STATUS</th>
-                <% if (loggedInAdmin.role === "Technical Team" || loggedInAdmin.role === "Developers") { %>
-                <th>ACTIONS</th>
-                <% } %>
-              </tr>
-            </thead>
-            <tbody>
-              <% admins.forEach(function(admin) { %>
-              <tr data-username="<%= admin.username %>">
-                <td>
-                  <img class="circle-img" src="<%= admin.img %>" alt="Admin Image" style="width: 50px; height: 50px" />
-                </td>
-                <td><%= admin.name %></td>
-                <td><%= admin.role %></td>
-                <td><%= admin.username %></td>
-                <td>
-                  <span class="password-mask">********</span>
-                  <button type="button" onclick="togglePassword(this)" data-password="<%= admin.password %>"><i class="fa-solid fa-magnifying-glass"></i>show</button>
-                </td>
-                <td><%= admin.status %></td>
-                <% if (loggedInAdmin.role === "Technical Team" || loggedInAdmin.role === "Developers") { %>
-                <td>
-                  <div class="actions">
-                  <button class="action-buttons button-edit" data-username="<%= admin.username %>">Edit</button>
-                  <button class="action-buttons button-cancel" data-username="<%= admin.username %>">Delete</button>
-                  </div>
-                </div>
-                <% } %>
-              </tr>
-              <% }); %>
-            </tbody>
-          </table>
+          <br />
+          <td class="table-container">
+            <table>
+              <thead>
+                <tr>
+                  <th>IMAGE</th>
+                  <th>NAME</th>
+                  <th>ROLE</th>
+                  <th>EMAIL</th>
+                  <th>PASSWORD</th>
+                  <th>STATUS</th>
+                  <% if (loggedInAdmin.role === "Technical Team" || loggedInAdmin.role === "Developers") { %>
+                  <th>ACTIONS</th>
+                  <% } %>
+                </tr>
+              </thead>
+              <tbody>
+                <% admins.forEach(function(admin) { %>
+                <tr data-username="<%= admin.username %>">
+                  <td>
+                    <img class="circle-img" src="<%= admin.img %>" alt="Admin Image" style="width: 50px; height: 50px" />
+                  </td>
+                  <td><%= admin.name %></td>
+                  <td><%= admin.role %></td>
+                  <td><%= admin.username %></td>
+                  <td>
+                    <span class="password-mask">********</span>
+                    <button type="button" onclick="togglePassword(this)" data-password="<%= admin.password %>"><i class="fa-solid fa-magnifying-glass"></i>show</button>
+                  </td>
+                  <td><%= admin.status %></td>
+                  <% if (loggedInAdmin.role === "Technical Team" || loggedInAdmin.role === "Developers") { %>
+                  <td>
+                    <div class="actions">
+                      <button class="action-buttons button-edit" data-username="<%= admin.username %>">Edit</button>
+                      <button class="action-buttons button-cancel" data-username="<%= admin.username %>">Delete</button>
+                    </div>
+                  </td>
+                  <% } %>
+                </tr>
+                <% }); %>
+              </tbody>
+            </table>
+          </td>
         </div>
       </main>
     </div>
