--- a/views/voter/review.ejs
+++ b/views/voter/review.ejs
@@ -7,9 +7,18 @@
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" type="text/css" href="voter/css/index-voter.css" />
     <link rel="stylesheet" type="text/css" href="voter/css/review.css" />
-     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
-       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-   
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
+    <style>
+      .loading-bar {
+        width: 0;
+        height: 5px;
+        background-color: #4caf50;
+        margin-top: 10px;
+        transition: width 10s linear;
+      }
+    </style>
   </head>
 
   <body>
@@ -53,7 +62,6 @@
       </div>
 
       <div class="content-main">
-       
         <p><i>Please REVIEW your votes before SUBMITTING BALLOT to the Blockchain.</i></p>
         <br />
         <div class="review">
@@ -210,7 +218,7 @@
             <input type="hidden" name="senator" value="<%= JSON.stringify(senator) %>" />
             <input type="hidden" name="governor" value="<%= JSON.stringify(governor) %>" />
             <input type="hidden" name="viceGovernor" value="<%= JSON.stringify(viceGovernor) %>" />
-            <input type="hidden" name="boardMember" value="<%= JSON.stringify(boardMember) %>" />\
+            <input type="hidden" name="boardMember" value="<%= JSON.stringify(boardMember) %>" />
             <input type="hidden" name="college" value="<%= college %>" />
             <input type="hidden" name="program" value="<%= program %>" />
             <input type="hidden" name="email" value="<%= email %>" />
@@ -248,7 +256,16 @@
                 </span>
               </button>
             </div>
+
+            <!-- Loading bar as a block element -->
+            <div id="loadingBar" class="loading-bar"></div>
           </form>
+
+          <script>
+            document.getElementById("voteForm").addEventListener("submit", function () {
+              document.getElementById("loadingBar").style.width = "100%";
+            });
+          </script>
 
           <br /><br />
           <hr />
@@ -259,7 +276,7 @@
     <footer class="footer">
       <div class="footer-left">
         <img src="img/calendar.png" class="footer-img" />
-        <p id="datetime">OCTOBER 23, 2024 - 04:17 AM</p>
+        <p id="datetime" data-date="<%= electionConfig.fakeCurrentDate %>"></p>
       </div>
 
       <div class="footer-center">
@@ -268,7 +285,39 @@
       </div>
       <div class="footer-right"></div>
     </footer>
-    </script>
     <script src="js/index.js"></script>
+
+    <script>
+      function formatDate(isoString) {
+        const date = new Date(isoString);
+        const options = {
+          month: "long",
+          day: "2-digit",
+          year: "numeric",
+          hour: "2-digit",
+          minute: "2-digit",
+          hour12: true,
+        };
+        return date.toLocaleString("en-US", options).toUpperCase();
+      }
+
+      function updateDateTime() {
+        const datetimeElement = document.getElementById("datetime");
+        if (!datetimeElement) return;
+
+        // Get the initial time from the data attribute
+        let currentTime = new Date(datetimeElement.getAttribute("data-date"));
+
+        function update() {
+          datetimeElement.textContent = formatDate(currentTime);
+          currentTime.setMinutes(currentTime.getMinutes() + 1); // Increment by 1 minute
+        }
+
+        update(); // Set initial formatted date
+        setInterval(update, 60000); // Update every minute (60000ms)
+      }
+
+      document.addEventListener("DOMContentLoaded", updateDateTime);
+    </script>
   </body>
 </html>
