--- a/views/homepages/index-voting-period.ejs
+++ b/views/homepages/index-voting-period.ejs
@@ -70,11 +70,12 @@
           <br />
 
           <!-- The voting button uses an id for stable reference -->
+          <button id="voting-button" class="button-rounded-yellow" onclick="window.location.href='/vote';">VOTE NOW</button>
         </div>
 
         <div class="content-main-right">
           <img src="img/logo_bulsu_ucse.png" alt="BulSU UCSE Logo" class="logo-opacity" /><br />
-          <p class="montserrat" id="vote-now">Vote Now for the Student Government Elections!</p>
+          <p class="montserrat">Vote Now for the Student Government Elections!</p>
         </div>
       </div>
     </div>
