--- a/views/voter/verify-otp.ejs
+++ b/views/voter/verify-otp.ejs
@@ -40,7 +40,8 @@
           <br />
           <form action="/verify-otp" method="POST">
             <input type="tel" name="otp" inputmode="numeric" pattern="\d{6}" maxlength="6" placeholder="Enter OTP" class="otp-field" required />
-            <button type="submit">Submit OTP</button>
+            <br />
+            <button id="resend-btn" type="submit">Submit OTP</button>
           </form>
 
           <br />
