--- a/views/voter/review.ejs
+++ b/views/voter/review.ejs
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
     <style>
       .loading-bar {
         width: 0;
@@ -42,7 +44,7 @@
 
               <div class="dropdown-menu">
                 <a href="#">Logged in as <span>Microsoft Email</span></a>
-                <a href="#">Log Out</a>
+                <a href="/voter/logout">Log Out</a>
               </div>
             </div>
           </div>
