--- a/views/homepages/index-registration-period.ejs
+++ b/views/homepages/index-registration-period.ejs
@@ -149,7 +149,7 @@
         let distance = 0;
         if (now < registrationStart) {
           electionPeriodElem.textContent = "Registration Period:";
-          timeLeftElem.textContent = "Time Until Registration Opens:";
+          timeLeftElem.textContent = "Time Until Registration Opens";
           distance = registrationStart - now;
           registerButton.style.display = "none";
         } else if (now >= registrationStart && now <= registrationEnd) {
