--- a/views/voter/vote.ejs
+++ b/views/voter/vote.ejs
@@ -138,7 +138,7 @@
           <!-- Local Student Council Section -->
           <div class="ballot ballot-lsc">
             <br />
-            <h3 class="ballot-header ballot-lsc-council">Local Student Council - [Voter College]</h3>
+            <h3 class="ballot-header ballot-lsc-council">Local Student Council - <%= college %></h3>
             <br /><br />
 
             <!-- Governor Candidates -->
